samples/_failures_safe/1761470899_b1d999_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45a8e75c.c: In function ‘main’:
./samples/SAFE/__tmp_45a8e75c.c:168:9: error: expected expression at end of input
  168 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_45a8e75c.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45a8e75c.c:168:9: error: expected declaration or statement at end of input
